--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.16", features = ["derive"] }
 dialoguer = "0.11.0"
 rand = "0.8.5"
 rand-utf8 = "0.0.1"
