--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = { version = "4.5.16", features = ["derive"] }
 dialoguer = "0.11.0"
 num = "0.4.3"
+num-bigint = "0.4.6"
 num-primes = "0.3.0"
 num-traits = "0.2.19"
 rand = "0.8.5"
